Bug 442319 - Closing Amarok with playback volume set at 100% and then reopening has volume set at 0%
Summary: Closing Amarok with playback volume set at 100% and then reopening has volume...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playback (other bugs)
Version First Reported In: 2.9.71
Platform: Ubuntu Linux
: NOR normal
Target Milestone: kf5
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-12 04:06 UTC by Marc
Modified: 2024-05-27 21:31 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marc 2021-09-12 04:06:38 UTC
SUMMARY
marcerickson@gmail.com
Closing Amarok with playback volume set at 100% and then reopening has volume set at 0%


STEPS TO REPRODUCE
1. Set playback volume at 100%
2. Exit Amarok
3. Open Amarok

OBSERVED RESULT
Playback volume is at 0%

EXPECTED RESULT
Playback volume is at 100%

SOFTWARE/OS VERSIONS

Linux/KDE Plasma: 
(available in About System)
Ubuntu 18.04.5 LTS Sever with xfce GUI

KDE Plasma Version: Unknown
KDE Frameworks Version: Unknown
Qt Version: Unknown

ADDITIONAL INFORMATION
Comment 1 Myriam Schweingruber 2021-09-13 11:41:28 UTC
I can't reproduce this here at all, might be specific to your installation.
Comment 2 robert marshall 2021-09-15 14:55:08 UTC
I'm seeing this sometimes too - but I'm not sure what is provoking it - or how to reliably show the bug.
Comment 3 Myriam Schweingruber 2021-09-17 08:13:29 UTC
Reopening based on Roberts comment
Comment 4 Tuomas Nurmi 2024-05-26 20:40:02 UTC
Based on discussion and extra information on mailing list, I managed to reproduce at least one case where this happens:
With Phonon VLC backend, if a playing track is stopped, master volume is set to 0. Playback will continue with correct volume if a next track is played. However, if Amarok is shut down with playback stopped, the 0 gets written as the master volume setting and will be the initial volume on next startup. Will create a fix MR shortly.
Comment 5 Bug Janitor Service 2024-05-26 20:43:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/amarok/-/merge_requests/101
Comment 6 Tuomas Nurmi 2024-05-27 21:31:16 UTC
Git commit 5587e27f06701dd84393da54c8dd93a70d83f203 by Tuomas Nurmi.
Committed on 27/05/2024 at 21:28.
Pushed by nurmi into branch 'master'.

Avoid volume getting set to 0 when phonon-vlc playback is stopped

Shouldn't affect behaviour with other backend(s), which do not experience the
bug.

M  +1    -0    ChangeLog
M  +3    -0    src/EngineController.cpp

https://invent.kde.org/multimedia/amarok/-/commit/5587e27f06701dd84393da54c8dd93a70d83f203