Avoid volume getting set to 0 when phonon-vlc playback is stopped

Shouldn't affect behaviour with other backend(s), which do not experience the
bug.

BUG: 442319